# GameEngine

./: .gitignore  CMakeLists.txt  README.md
Editor/: CMakeLists.txt  Editor.cpp  Editor.h
Engine/: CMakeLists.txt  Engine.cpp  Engine.h  Engine.vcxproj  Engine.vcxproj.filters  EngineMacro.h  EngineType.h  GameObject.h  Object.h  Screen.cpp  Screen.h  imgui.ini
Engine/Asset/: AssetImporter.cpp  AssetImporter.h  AssetManager.cpp  AssetManager.h
Engine/Asset/3D/: FBXImporter.cpp  FBXImporter.h  FBXMemoryReadStream.cpp  FBXMemoryReadStream.h  OBJImporter.cpp  OBJImporter.h
Engine/Asset/Audio/: WaveImporter.cpp  WaveImporter.h
Engine/Asset/Image/: StbImage.cpp  StbImage.h  StbImageImporter.cpp  StbImageImporter.h
Engine/Asset/Sound/: WaveImporter.cpp  WaveImporter.h
Engine/Audio/: Audio.cpp  Audio.h  AudioClip.h
Engine/Component/: Camera.cpp  Camera.h  Component.cpp  Component.h  Transform.cpp  Transform.h
Engine/Component/Physics/: BoxCollider.cpp  BoxCollider.h  Collider.cpp  Collider.h  Rigidbody.cpp  Rigidbody.h  SphereCollider.cpp  SphereCollider.h
Engine/Component/Rendering/: Light.cpp  Light.h  MeshRenderer.cpp  MeshRenderer.h  Renderer.cpp  Renderer.h
Engine/Core/: CoreForward.h  CoreMacro.h  CoreMinimal.h  CoreType.h
Engine/Core/Application/: Application.cpp  Application.h
Engine/Core/File/: File.cpp  File.h  FileSystem.cpp  FileSystem.h
Engine/Core/Input/: Input.h
Engine/Core/JSON/: JsonSerializer.h
Engine/Core/Math/: Math.cpp  Math.h  Matrix4x4.cpp  Matrix4x4.h  Vector2.h  Vector3.cpp
Engine/Core/Modular/: Module.cpp  Module.h  ModuleBase.h  ModuleMacro.h  ModuleManager.cpp  ModuleManager.h  WindowsImportDLL.cpp
Engine/Physics/: Physics.cpp  Physics.h  PhysicsEventListener.cpp  PhysicsEventListener.h
Engine/Platform/: Platform.cpp  Platform.h  PlatformMacro.h  PlatformRenderingInterface.h  PlatformType.h
Engine/Platform/Generic/: GenericApplication.cpp  GenericApplication.h  GenericAudio.h  GenericFile.h  GenericFileSystem.h  GenericInput.cpp  GenericInput.h  GenericPlatformApplication.cpp  GenericPlatformApplication.h  GenericPlatformFile.cpp  GenericPlatformFile.h  GenericPlatformFileSystem.cpp  GenericPlatformFileSystem.h  GenericPlatformInput.cpp  GenericPlatformInput.h  GenericPlatformThread.cpp  GenericPlatformThread.h  GenericPlatformTimer.cpp  GenericPlatformTimer.h  GenericThread.h  GenericTimer.cpp  GenericTimer.h
Engine/Platform/Windows/: WinMain.cpp  WindowsApplication.cpp  WindowsApplication.h  WindowsAudio.h  WindowsFile.cpp  WindowsFile.h  WindowsFileSystem.cpp  WindowsFileSystem.h  WindowsInput.cpp  WindowsInput.h  WindowsThread.cpp  WindowsThread.h  WindowsTimer.cpp  WindowsTimer.h
Engine/RI/: RenderingInterface.h  RenderingInterfaceMacro.h  RenderingInterfaceResource.h
Engine/RI/D3D11/: D3D11.h  D3D11RenderingInterface.cpp  D3D11RenderingInterface.h  D3D11RenderingInterfaceEnum.h  D3D11RenderingInterfaceResource.h
Engine/Rendering/: GlobalRenderer.cpp  GlobalRenderer.h  GlobalRendererSettings.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Texture2D.cpp  Texture2D.h  TextureCube.cpp  TextureCube.h
Engine/Rendering/Pipeline/: RenderPass.cpp  RenderPass.h  RenderPipeline.cpp  RenderPipeline.h
Engine/Scene/: Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
Engine/Sound/: Sound.cpp  Sound.h  SoundClip.cpp  SoundClip.h
Source/: CMakeLists.txt  Type.h  TypeCheck.h
Source/Core/: CoreMinimal.h
Source/Core/Application/: Application.h
Source/Core/File/: File.cpp  File.h  FileSystem.cpp  FileSystem.h
Source/Core/Input/: Input.cpp
Source/Core/JSON/: JsonSerializer.cpp  JsonSerializer.h
Source/Core/Math/: AABB.cpp  AABB.h  Math.h  Matrix4x4.h  Plane.cpp  Plane.h  Quaternion.cpp  Quaternion.h  Vector2.cpp  Vector3.h  Vector4.cpp  Vector4.h
Source/Core/Modular/: Module.h  ModuleManager.cpp  ModuleManager.h
Source/Core/Time/: Timer.cpp  Timer.h
Source/Editor/: DearImGui.cpp  DearImGui.h  Editor.cpp  Editor.h  EditorGUI.cpp  EditorGUI.h  EditorMenu.cpp  EditorMenu.h  EditorModalWindow.cpp  EditorModalWindow.h  EditorWindow.cpp  EditorWindow.h  GameWindow.cpp  GameWindow.h  InspectorWindow.cpp  InspectorWindow.h  ProjectWindow.cpp  ProjectWindow.h  SceneWindow.cpp  SceneWindow.h
Source/Editor/Core/: DearImGui.cpp  DearImGui.h  EditorCoreMacro.h  EditorGUI.cpp  EditorGUI.h  EditorMenu.cpp  EditorMenu.h  EditorModalWindow.cpp  EditorModalWindow.h  EditorWindow.cpp  EditorWindow.h
Source/Editor/Editor/: Editor.cpp  Editor.h  EditorMacro.h
Source/Editor/Menu/: FileMenu.cpp  FileMenu.h  WindowMenu.cpp  WindowMenu.h
Source/Editor/Modal/: CreateMaterialModal.cpp  CreateMaterialModal.h  CreateSceneModal.cpp  CreateSceneModal.h  EditMaterialModal.cpp  EditMaterialModal.h  OpenSceneModal.cpp  OpenSceneModal.h
Source/Editor/Window/: GameWindow.cpp  GameWindow.h  InspectorWindow.cpp  InspectorWindow.h  ProjectWindow.cpp  ProjectWindow.h  SceneWindow.cpp  SceneWindow.h  ViewportWindow.cpp  ViewportWindow.h
Source/Engine/: Engine.cpp  EngineMacro.h  GameObject.cpp  GameObject.h  Object.cpp  Object.h
Source/Engine/Asset/: AssetData.cpp  AssetData.h  AssetImporter.cpp  AssetImporter.h  AssetMacro.h  AssetManager.cpp  AssetManager.h
Source/Engine/Audio/: Audio.h  AudioClip.h
Source/Engine/Component/: Camera.cpp  Camera.h  Component.cpp  Component.h  Transform.cpp  Transform.h
Source/Engine/Core/: CoreForward.h  CoreMacro.h  CoreMinimal.h  Object.cpp  Object.h
Source/Engine/Engine/: Engine.cpp  Engine.h  EngineMacro.h  GameObject.cpp  GameObject.h
Source/Engine/Physics/: Physics.cpp  Physics.h  PhysicsEventListener.cpp  PhysicsEventListener.h
Source/Engine/Platform/: Platform.cpp  Platform.h  PlatformMacro.h  PlatformRenderingInterface.h  PlatformType.h
Source/Main/: MacApplication.swift  WinMain.cpp
Source/Platform/: Platform.cpp  PlatformMacro.h  PlatformRenderingInterface.h  PlatformType.h
Source/RI/: RenderingInterface.cpp  RenderingInterface.h  RenderingInterfaceEnum.h  RenderingInterfaceMacro.h  RenderingInterfaceResource.h
(+315 files in other folders)
